labelstudio-kubernets/labelstudio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labelstudio-ingress
  namespace: default  # Replace with your namespace if it's different
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: labelstudio-ls-app  # Replace with your service name
              port:
                number: 80  # Replace with your service's target port if different
